# cbsd_hallucination_project

./: .gitignore  README.md  load_data.py  pyproject.toml  training.ipynb
cbsd_hallucination/: pyproject.toml
cbsd_hallucination/cbsd_hallucination/: hallucination_project.ipynb
cbsd_hallucination_project/: hallucination_project.ipynb  load_data.ipynb  load_data.py
data/: evaluation_dataset.json  training_dataset.json
hallucination/: hallucinations.docx
