[tool.poetry]
name = "hallucination"
version = "0.1.0"
description = "Me and my friends are doing a Cognitive project about hallucinations"
authors = ["Mattia Piazza <mattiapiazza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
JSON4JSON = "^0.4.3"

[tool.poetry.group.dev.dependencies]
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
