[tool.poetry]
name = "cbsd_hallucination_project"
version = "0.1.0"
description = ""
authors = ["Mattia Piazza <mattiapiazza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
ipykernel = "^6.29.4"

[tool.poetry.group.dev.dependencies]
rich = "^13.7.1"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
